.antlr/TeamPlusPlusParser.java
// Generated from d:\Respaldo\Gibran\Proyectos_Programacion\Compis\TeamPlusPlus\TeamPlusPlus.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TeamPlusPlusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, INT=2, FLOAT=3, CHAR=4, VARS=5, CLASS=6, INHERITS=7, MAIN=8, 
		IF=9, ELSE=10, THEN=11, FUNC=12, RETURN=13, READ=14, PRINT=15, WHILE=16, 
		FROM=17, TO=18, ATTRIBUTES=19, METHODS=20, IMPORT=21, AS=22, PUBLIC=23, 
		PRIVATE=24, AND=25, OR=26, NOT=27, COLON=28, COMMA=29, DOT=30, ASSIGN=31, 
		LEFT_BRACE=32, RIGHT_BRACE=33, LEFT_PARENTHESIS=34, RIGHT_PARENTHESIS=35, 
		LEFT_BRACKET=36, RIGHT_BRACKET=37, SEMICOLON=38, PLUS=39, MINUS=40, MULT=41, 
		DIV=42, EQUALS=43, GREATER_THAN=44, LESS_THAN=45, GREATER_EQUALS=46, LESS_EQUALS=47, 
		DIFFERENT=48, CTE_INT=49, CTE_FLOAT=50, CTE_CHAR=51, CTE_STRING=52, ID=53, 
		COMMENT=54, WHITESPACE=55;
	public static final int
		RULE_program = 0, RULE_imports = 1, RULE_classes = 2, RULE_tpp_vars = 3, 
		RULE_c_vars = 4, RULE_var = 5, RULE_init = 6, RULE_functions = 7, RULE_c_functions = 8, 
		RULE_main = 9, RULE_funblock = 10, RULE_tpp_type = 11, RULE_level = 12, 
		RULE_statement = 13, RULE_assignment = 14, RULE_funcall = 15, RULE_tpp_return = 16, 
		RULE_read = 17, RULE_tpp_print = 18, RULE_block = 19, RULE_condition = 20, 
		RULE_loop = 21, RULE_wloop = 22, RULE_floop = 23, RULE_expression = 24, 
		RULE_expression_A = 25, RULE_express = 26, RULE_exp = 27, RULE_term = 28, 
		RULE_factor = 29, RULE_relop = 30, RULE_sumop = 31, RULE_mulop = 32, RULE_value = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "imports", "classes", "tpp_vars", "c_vars", "var", "init", 
			"functions", "c_functions", "main", "funblock", "tpp_type", "level", 
			"statement", "assignment", "funcall", "tpp_return", "read", "tpp_print", 
			"block", "condition", "loop", "wloop", "floop", "expression", "expression_A", 
			"express", "exp", "term", "factor", "relop", "sumop", "mulop", "value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program'", "'int'", "'float'", "'char'", "'vars'", "'class'", 
			"'inherits'", "'main'", "'if'", "'else'", "'then'", "'func'", "'return'", 
			"'read'", "'print'", "'while'", "'from'", "'to'", "'attributes'", "'methods'", 
			"'import'", "'as'", "'public'", "'private'", "'and'", "'or'", "'not'", 
			"':'", "','", "'.'", "'='", "'{'", "'}'", "'('", "')'", "'['", "']'", 
			"';'", "'+'", "'-'", "'*'", "'/'", "'=='", "'>'", "'<'", "'>='", "'<='", 
			"'!='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAM", "INT", "FLOAT", "CHAR", "VARS", "CLASS", "INHERITS", 
			"MAIN", "IF", "ELSE", "THEN", "FUNC", "RETURN", "READ", "PRINT", "WHILE", 
			"FROM", "TO", "ATTRIBUTES", "METHODS", "IMPORT", "AS", "PUBLIC", "PRIVATE", 
			"AND", "OR", "NOT", "COLON", "COMMA", "DOT", "ASSIGN", "LEFT_BRACE", 
			"RIGHT_BRACE", "LEFT_PARENTHESIS", "RIGHT_PARENTHESIS", "LEFT_BRACKET", 
			"RIGHT_BRACKET", "SEMICOLON", "PLUS", "MINUS", "MULT", "DIV", "EQUALS", 
			"GREATER_THAN", "LESS_THAN", "GREATER_EQUALS", "LESS_EQUALS", "DIFFERENT", 
			"CTE_INT", "CTE_FLOAT", "CTE_CHAR", "CTE_STRING", "ID", "COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TeamPlusPlus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TeamPlusPlusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(TeamPlusPlusParser.PROGRAM, 0); }
		public TerminalNode ID() { return getToken(TeamPlusPlusParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(TeamPlusPlusParser.SEMICOLON, 0); }
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(TeamPlusPlusParser.EOF, 0); }
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public ClassesContext classes() {
			return getRuleContext(ClassesContext.class,0);
		}
		public Tpp_varsContext tpp_vars() {
			return getRuleContext(Tpp_varsContext.class,0);
		}
		public FunctionsContext functions() {
			return getRuleContext(FunctionsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(PROGRAM);
			setState(69);
			match(ID);
			setState(70);
			match(SEMICOLON);
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPORT) {
				{
				setState(71);
				imports();
				}
			}

			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CLASS) {
				{
				setState(74);
				classes();
				}
			}

			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VARS) {
				{
				setState(77);
				tpp_vars();
				}
			}

			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FUNC) {
				{
				setState(80);
				functions();
				}
			}

			setState(83);
			main();
			setState(84);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportsContext extends ParserRuleContext {
		public List<TerminalNode> IMPORT() { return getTokens(TeamPlusPlusParser.IMPORT); }
		public TerminalNode IMPORT(int i) {
			return getToken(TeamPlusPlusParser.IMPORT, i);
		}
		public List<TerminalNode> ID() { return getTokens(TeamPlusPlusParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TeamPlusPlusParser.ID, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(TeamPlusPlusParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(TeamPlusPlusParser.SEMICOLON, i);
		}
		public List<TerminalNode> AS() { return getTokens(TeamPlusPlusParser.AS); }
		public TerminalNode AS(int i) {
			return getToken(TeamPlusPlusParser.AS, i);
		}
		public ImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imports; }
	}

	public final ImportsContext imports() throws RecognitionException {
		ImportsContext _localctx = new ImportsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_imports);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(86);
				match(IMPORT);
				setState(87);
				match(ID);
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AS) {
					{
					setState(88);
					match(AS);
					setState(89);
					match(ID);
					}
				}

				setState(92);
				match(SEMICOLON);
				}
				}
				setState(95); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IMPORT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassesContext extends ParserRuleContext {
		public List<TerminalNode> CLASS() { return getTokens(TeamPlusPlusParser.CLASS); }
		public TerminalNode CLASS(int i) {
			return getToken(TeamPlusPlusParser.CLASS, i);
		}
		public List<TerminalNode> ID() { return getTokens(TeamPlusPlusParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TeamPlusPlusParser.ID, i);
		}
		public List<TerminalNode> LEFT_BRACE() { return getTokens(TeamPlusPlusParser.LEFT_BRACE); }
		public TerminalNode LEFT_BRACE(int i) {
			return getToken(TeamPlusPlusParser.LEFT_BRACE, i);
		}
		public List<TerminalNode> RIGHT_BRACE() { return getTokens(TeamPlusPlusParser.RIGHT_BRACE); }
		public TerminalNode RIGHT_BRACE(int i) {
			return getToken(TeamPlusPlusParser.RIGHT_BRACE, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(TeamPlusPlusParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(TeamPlusPlusParser.SEMICOLON, i);
		}
		public List<TerminalNode> INHERITS() { return getTokens(TeamPlusPlusParser.INHERITS); }
		public TerminalNode INHERITS(int i) {
			return getToken(TeamPlusPlusParser.INHERITS, i);
		}
		public List<C_varsContext> c_vars() {
			return getRuleContexts(C_varsContext.class);
		}
		public C_varsContext c_vars(int i) {
			return getRuleContext(C_varsContext.class,i);
		}
		public List<C_functionsContext> c_functions() {
			return getRuleContexts(C_functionsContext.class);
		}
		public C_functionsContext c_functions(int i) {
			return getRuleContext(C_functionsContext.class,i);
		}
		public ClassesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classes; }
	}

	public final ClassesContext classes() throws RecognitionException {
		ClassesContext _localctx = new ClassesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(97);
				match(CLASS);
				setState(98);
				match(ID);
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INHERITS) {
					{
					setState(99);
					match(INHERITS);
					setState(100);
					match(ID);
					}
				}

				setState(103);
				match(LEFT_BRACE);
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ATTRIBUTES) {
					{
					setState(104);
					c_vars();
					}
				}

				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==METHODS) {
					{
					setState(107);
					c_functions();
					}
				}

				setState(110);
				match(RIGHT_BRACE);
				setState(111);
				match(SEMICOLON);
				}
				}
				setState(114); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CLASS );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tpp_varsContext extends ParserRuleContext {
		public TerminalNode VARS() { return getToken(TeamPlusPlusParser.VARS, 0); }
		public List<Tpp_typeContext> tpp_type() {
			return getRuleContexts(Tpp_typeContext.class);
		}
		public Tpp_typeContext tpp_type(int i) {
			return getRuleContext(Tpp_typeContext.class,i);
		}
		public List<InitContext> init() {
			return getRuleContexts(InitContext.class);
		}
		public InitContext init(int i) {
			return getRuleContext(InitContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(TeamPlusPlusParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(TeamPlusPlusParser.SEMICOLON, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TeamPlusPlusParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TeamPlusPlusParser.COMMA, i);
		}
		public Tpp_varsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tpp_vars; }
	}

	public final Tpp_varsContext tpp_vars() throws RecognitionException {
		Tpp_varsContext _localctx = new Tpp_varsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tpp_vars);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(VARS);
			setState(128); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(117);
					tpp_type();
					setState(118);
					init();
					setState(123);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(119);
						match(COMMA);
						setState(120);
						init();
						}
						}
						setState(125);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(126);
					match(SEMICOLON);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(130); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class C_varsContext extends ParserRuleContext {
		public TerminalNode ATTRIBUTES() { return getToken(TeamPlusPlusParser.ATTRIBUTES, 0); }
		public List<Tpp_typeContext> tpp_type() {
			return getRuleContexts(Tpp_typeContext.class);
		}
		public Tpp_typeContext tpp_type(int i) {
			return getRuleContext(Tpp_typeContext.class,i);
		}
		public List<InitContext> init() {
			return getRuleContexts(InitContext.class);
		}
		public InitContext init(int i) {
			return getRuleContext(InitContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(TeamPlusPlusParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(TeamPlusPlusParser.SEMICOLON, i);
		}
		public List<LevelContext> level() {
			return getRuleContexts(LevelContext.class);
		}
		public LevelContext level(int i) {
			return getRuleContext(LevelContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TeamPlusPlusParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TeamPlusPlusParser.COMMA, i);
		}
		public C_varsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c_vars; }
	}

	public final C_varsContext c_vars() throws RecognitionException {
		C_varsContext _localctx = new C_varsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_c_vars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(ATTRIBUTES);
			setState(147); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PUBLIC || _la==PRIVATE) {
					{
					setState(133);
					level();
					}
				}

				setState(136);
				tpp_type();
				setState(137);
				init();
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(138);
					match(COMMA);
					setState(139);
					init();
					}
					}
					setState(144);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(145);
				match(SEMICOLON);
				}
				}
				setState(149); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << CHAR) | (1L << PUBLIC) | (1L << PRIVATE) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TeamPlusPlusParser.ID, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(TeamPlusPlusParser.LEFT_BRACKET, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(TeamPlusPlusParser.RIGHT_BRACKET, 0); }
		public TerminalNode DOT() { return getToken(TeamPlusPlusParser.DOT, 0); }
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(TeamPlusPlusParser.COMMA, 0); }
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(ID);
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LEFT_BRACKET) {
				{
				setState(152);
				match(LEFT_BRACKET);
				setState(153);
				exp();
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(154);
					match(COMMA);
					setState(155);
					exp();
					}
				}

				setState(158);
				match(RIGHT_BRACKET);
				}
			}

			setState(164);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				{
				setState(162);
				match(DOT);
				setState(163);
				var();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TeamPlusPlusParser.ID, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(TeamPlusPlusParser.LEFT_BRACKET, 0); }
		public List<TerminalNode> CTE_INT() { return getTokens(TeamPlusPlusParser.CTE_INT); }
		public TerminalNode CTE_INT(int i) {
			return getToken(TeamPlusPlusParser.CTE_INT, i);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(TeamPlusPlusParser.RIGHT_BRACKET, 0); }
		public TerminalNode ASSIGN() { return getToken(TeamPlusPlusParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(TeamPlusPlusParser.COMMA, 0); }
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_init);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(ID);
			setState(174);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LEFT_BRACKET) {
				{
				setState(167);
				match(LEFT_BRACKET);
				setState(168);
				match(CTE_INT);
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(169);
					match(COMMA);
					setState(170);
					match(CTE_INT);
					}
				}

				setState(173);
				match(RIGHT_BRACKET);
				}
			}

			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(176);
				match(ASSIGN);
				setState(177);
				expression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionsContext extends ParserRuleContext {
		public List<TerminalNode> FUNC() { return getTokens(TeamPlusPlusParser.FUNC); }
		public TerminalNode FUNC(int i) {
			return getToken(TeamPlusPlusParser.FUNC, i);
		}
		public List<Tpp_typeContext> tpp_type() {
			return getRuleContexts(Tpp_typeContext.class);
		}
		public Tpp_typeContext tpp_type(int i) {
			return getRuleContext(Tpp_typeContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(TeamPlusPlusParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TeamPlusPlusParser.ID, i);
		}
		public List<TerminalNode> LEFT_PARENTHESIS() { return getTokens(TeamPlusPlusParser.LEFT_PARENTHESIS); }
		public TerminalNode LEFT_PARENTHESIS(int i) {
			return getToken(TeamPlusPlusParser.LEFT_PARENTHESIS, i);
		}
		public List<TerminalNode> RIGHT_PARENTHESIS() { return getTokens(TeamPlusPlusParser.RIGHT_PARENTHESIS); }
		public TerminalNode RIGHT_PARENTHESIS(int i) {
			return getToken(TeamPlusPlusParser.RIGHT_PARENTHESIS, i);
		}
		public List<FunblockContext> funblock() {
			return getRuleContexts(FunblockContext.class);
		}
		public FunblockContext funblock(int i) {
			return getRuleContext(FunblockContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TeamPlusPlusParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TeamPlusPlusParser.COMMA, i);
		}
		public FunctionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functions; }
	}

	public final FunctionsContext functions() throws RecognitionException {
		FunctionsContext _localctx = new FunctionsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_functions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(200); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(180);
				match(FUNC);
				setState(181);
				tpp_type();
				setState(182);
				match(ID);
				setState(183);
				match(LEFT_PARENTHESIS);
				setState(195);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << CHAR) | (1L << ID))) != 0)) {
					{
					setState(184);
					tpp_type();
					setState(185);
					match(ID);
					setState(192);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(186);
						match(COMMA);
						setState(187);
						tpp_type();
						setState(188);
						match(ID);
						}
						}
						setState(194);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(197);
				match(RIGHT_PARENTHESIS);
				setState(198);
				funblock();
				}
				}
				setState(202); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==FUNC );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
